@@ -1,74 +1,86 @@
-import org.elasticsearch.gradle.info.BuildParams
+import org.elasticsearch.gradle.internal.test.TestUtil
 
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
-apply plugin: 'elasticsearch.build'
+apply plugin: org.elasticsearch.gradle.internal.ElasticsearchJavaBasePlugin
+apply plugin: 'java-library'
 apply plugin: 'application'
-mainClassName = 'org.openjdk.jmh.Main'
+
+var os = org.gradle.internal.os.OperatingSystem.current()
+
+application {
+  mainClass = 'org.openjdk.jmh.Main'
+}
 
 tasks.named("assemble").configure { enabled = false }
-archivesBaseName = 'elasticsearch-benchmarks'
+base {
+  archivesName = 'elasticsearch-benchmarks'
+}
 
 tasks.named("test").configure { enabled = false }
+tasks.named("javadoc").configure { enabled = false }
+
+configurations {
+  expression
+  painless
+  nativeLib
+}
 
 dependencies {
-  api( project(":server")) {
+  api(project(":server")) {
     // JMH ships with the conflicting version 4.6. This prevents us from using jopt-simple in benchmarks (which should be ok) but allows
     // us to invoke the JMH uberjar as usual.
     exclude group: 'net.sf.jopt-simple', module: 'jopt-simple'
   }
+  api(project(':libs:h3'))
+  api(project(':modules:aggregations'))
+  api(project(':x-pack:plugin:esql-core'))
+  api(project(':x-pack:plugin:esql'))
+  api(project(':x-pack:plugin:esql:compute'))
+  implementation project(path: ':libs:simdvec')
+  expression(project(path: ':modules:lang-expression', configuration: 'zip'))
+  painless(project(path: ':modules:lang-painless', configuration: 'zip'))
+  nativeLib(project(':libs:native'))
   api "org.openjdk.jmh:jmh-core:$versions.jmh"
   annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:$versions.jmh"
   // Dependencies of JMH
-  runtimeOnly 'net.sf.jopt-simple:jopt-simple:4.6'
-  runtimeOnly 'org.apache.commons:commons-math3:3.2'
+  runtimeOnly 'net.sf.jopt-simple:jopt-simple:5.0.4'
+  runtimeOnly 'org.apache.commons:commons-math3:3.6.1'
 }
 
 // enable the JMH's BenchmarkProcessor to generate the final benchmark classes
 // needs to be added separately otherwise Gradle will quote it and javac will fail
 tasks.named("compileJava").configure {
   options.compilerArgs.addAll(["-processor", "org.openjdk.jmh.generators.BenchmarkProcessor"])
+  // org.elasticsearch.plugins.internal is used in signatures classes used in benchmarks but we don't want to expose it publicly
+  // adding an export to allow compilation with gradle. This does not solve a problem in intellij as it does not use compileJava task
+  options.compilerArgs.addAll(["--add-exports", "org.elasticsearch.server/org.elasticsearch.plugins.internal=ALL-UNNAMED"])
 }
 
-tasks.named("run").configure { executable = "${BuildParams.runtimeJavaHome}/bin/java"}
+tasks.register('copyExpression', Copy) {
+  dependsOn configurations.expression
+  from { configurations.expression.collect { zipTree(it) } }
+  into "${buildDir}/plugins/expression"
+}
 
-// classes generated by JMH can use all sorts of forbidden APIs but we have no influence at all and cannot exclude these classes
-disableTasks('forbiddenApisMain')
+tasks.register("copyPainless", Copy) {
+  dependsOn configurations.painless
+  from { configurations.painless.collect { zipTree(it) } }
+  into "${buildDir}/plugins/painless"
+}
 
-// No licenses for our benchmark deps (we don't ship benchmarks)
-tasks.named("dependencyLicenses").configure { enabled = false }
-tasks.named("dependenciesInfo").configure {  enabled = false }
-tasks.named("dependenciesGraph").configure {  enabled = false }
-
-
-tasks.named("thirdPartyAudit").configure {
-  ignoreViolations(
-          // these classes intentionally use JDK internal API (and this is ok since the project is maintained by Oracle employees)
-          'org.openjdk.jmh.profile.AbstractHotspotProfiler',
-          'org.openjdk.jmh.profile.HotspotThreadProfiler',
-          'org.openjdk.jmh.profile.HotspotClassloadingProfiler',
-          'org.openjdk.jmh.profile.HotspotCompilationProfiler',
-          'org.openjdk.jmh.profile.HotspotMemoryProfiler',
-          'org.openjdk.jmh.profile.HotspotRuntimeProfiler',
-          'org.openjdk.jmh.util.Utils'
-  )
+tasks.named("run").configure {
+  executable = "${buildParams.runtimeJavaHome.get()}/bin/java"
+  args << "-Dplugins.dir=${buildDir}/plugins" << "-Dtests.index=${buildDir}/index"
+  dependsOn "copyExpression", "copyPainless", configurations.nativeLib
+  systemProperty 'es.nativelibs.path', TestUtil.getTestLibraryPath(file("../libs/native/libraries/build/platform/").toString())
 }
 
 spotless {
